--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -13,7 +13,7 @@ vi:
   shared:
     post_element:
       you_sure: "Bạn chắc chắn muốn xóa?"
-      delete: "Xóa bài viết"
+      delete: "Xóa"
       edit: "Chỉnh sửa"
       report: "Báo cáo"
       commented: "người đã bình luận..."
